--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,59 @@
-version: '2.1'
+version: '3.0'
 
 services:
   db:
-    image: mysql:5.6
+    image: postgres
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: contactabilidad_db
-    healthcheck:
-      test: mysql -h localhost -u root -p1234 -Bse "show databases;"
-      interval: 5s
+      POSTGRES_DB: Contactabilidad_db
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: unab1234
+
+  redis:
+    image: "redis:alpine"
 
   web:
     build: .
     image: contactabilidad
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8080
     volumes:
       - .:/code
     ports:
-      - "8000:8000"
+      - "8080:8080"
+      - "3000:3000"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+      - redis
     environment:
-      NAME: contactabilidad_db
+      NAME: Contactabilidad_db
       USER: root
-      PASSWORD: 1234
+      PASSWORD: unab1234
       HOST: db
+      REDIS_URL: redis
 
   migrate:
     image: contactabilidad
-    command: python  manage.py migrate
+    command: python manage.py migrate
     volumes:
       - .:/code
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+      - redis
     environment:
-      NAME: contactabilidad_db
+      NAME: Contactabilidad_db
       USER: root
-      PASSWORD: 1234
+      PASSWORD: unab1234
       HOST: db
+
+  #redis:
+  #  container_name: redis
+  #  image: redis:2.8
+  #  command: ["redis-server", "--appendonly", "yes"]
+  #  hostname: redis
+  #  expose:
+  #    - 6379
+  #  networks:
+  #    - redis-net
+  #  volumes:
+  #    - redis-data:/data
+  #  ports:
+  #      - "6379:6379"
