--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,72 @@
-Django==1.11
-MySQL-python==1.2.5
-Unidecode==0.04.20
-argparse==1.2.1
-certifi==2017.04.17
-chardet==3.0.3
+aioredis==1.2.0
+argparse==1.4.0
+asgiref==3.2.1
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.1.0
+autobahn==19.8.1
+Automat==0.7.0
+
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.7
+
+daphne==2.3.0
+defusedxml==0.6.0
+Django==2.2.3
+django-allauth==0.32.0
 django-bootstrap-form==3.2.1
+django-cors-headers==2.1.0
 django-general-tags==0.1
+django-jquery==3.1.0
 django-localflavor==1.4.1
 django-mptt==0.8.7
-et-xmlfile==1.0.1
-honcho==0.7.1
-idna==2.5
-jdcal==1.3
-openpyxl==2.4.7
-requests==2.17.3
-urllib3==1.21.1
-wsgiref==0.1.2
-django-allauth==0.32.0
-django-cors-headers==2.1.0
 django-rest-auth==0.9.1
+django-summernote==0.8.10.0
 djangorestframework==3.6.3
-oauthlib==2.0.2
-requests-oauthlib==0.8.0
-html5lib==1.0b8
-xhtml2pdf==0.0.6
-PyPDF2==1.26.0
 
+et-xmlfile==1.0.1
+
+hiredis==1.0.0
+honcho==0.7.1
+html5lib
+hyperlink==19.0.0
+
+idna==2.5
+incremental==17.5.0
+
+jdcal==1.3
+
+msgpack==0.6.1
+mysqlclient==1.3.12
+
+oauthlib==2.0.2
+openpyxl==2.5.1
+
+Pillow==5.3.0
+psycopg2==2.8.1
+pycparser==2.19
+PyHamcrest==1.9.0
+PyPDF2==1.26.0
+python-openid==2.2.5
+python3-openid==3.1.0
+pytz==2019.2
+
+requests==2.17.3
+requests-oauthlib==0.8.0
+
+selenium==3.141.0
+six==1.12.0
+sqlparse==0.3.0
+
+Twisted==19.7.0
+txaio==18.8.1
+
+Unidecode==0.04.20
+urllib3==1.21.1
+
+xhtml2pdf==0.0.6
+
+zope.interface==4.6.0
